# pizzeria_2.0

./: Makefile.am  README.md  configure.ac
src/: Makefile  Makefile.am  Makefile.in  main.c
src/View/: Makefile.am  baristaView.c  baristaView.h  cameriereView.c  cameriereView.h  loginView.c  loginView.h  managerView.c  managerView.h  pizzaioloView.c  pizzaioloView.h
src/controller/: Makefile.am  controllerBarista.c  controllerBarista.h  controllerLogin.c  controllerLogin.h  controllerManager.c  controllerManager.h  controllerPizzaiolo.c  controllerPizzaiolo.h
src/model/: Makefile.am  db.c  db.h
src/util/: Makefile.am
