ACLOCAL_AMFLAGS = -I m4
bin_PROGRAMS = client
AUTOMAKE_OPTIONS = subdir-objects
client_SOURCES = main.c \
		 controller/controllerPizzaiolo.c \
		 controller/controllerPizzaiolo.h \
		 controller/controllerManager.c	\
		 controller/controllerManager.h \
		 controller/controllerLogin.c \
		 controller/controllerLogin.h \
		 controller/controllerBarista.c \
		 controller/controllerBarista.h \
		 controller/controllerCameriere.c \
		 controller/controllerCameriere.h \
		 model/db.c \
		 model/db.h \
		 util/defines.h \
		 util/inout.c \
		 util/parse.c \
		 util/utils.c \
		 View/baristaView.c \
		 View/baristaView.h \
		 View/cameriereView.c \
		 View/cameriereView.h \
		 View/loginView.c \
		 View/loginView.h \
		 View/mangerView.c \
		 View/managerView.h \
		 View/pizzaioloView.c \
		 View/pizzaioloView.h 
