ACLOCAL_AMFLAGS = -I m4
bin_PROGRAMS = client
client_SOURCES = controllerBarista.c \
		 controllerBarista.h \
		 controllerCameriere.c \
		 controllerCameriere.h \
		 controllerManager.c \
		 controllerManager.h \
		 controllerPizzaiolo.c \
		 controllerPizzaiolo.h \
		 controllerLogin.c \
		 controlelrLogin.h
